test for important fields